added db communication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=studymaster-backend
+spring.docker.compose.enabled=false
+
+# Datenbank-Konfiguration
+spring.datasource.url=jdbc:postgresql://localhost:5432/studymaster
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
