implemented Spring Security
implemented Spring Security for Authentification & Session Management (heavy testing is still pending)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=studymaster-backend
 spring.docker.compose.enabled=false
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 # Datenbank-Konfiguration
 spring.datasource.url=jdbc:postgresql://localhost:5432/studymaster
 spring.datasource.username=postgres
