--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 logging.level.org.springframework.security=DEBUG
+logging.level.at.technikum.studymasterbackend.filter.JWTAuthenticationFilter=DEBUG
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+logging.level.org.springframework=DEBUG
+logging.level.at.technikum.studymasterbackend=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.springframework.jdbc.core=DEBUG
+logging.level.org.springframework.data.jdbc.core=DEBUG
