--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
 spring.application.name=studymaster-backend
-spring.docker.compose.enabled=false
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Datenbank-Konfiguration
-spring.datasource.url=jdbc:postgresql://localhost:5432/studymaster
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DB_URL:jdbc:postgresql://localhost:5432/studymaster}
+spring.datasource.username=${SPRING_DB_USERNAME:postgres}
+spring.datasource.password=${SPRING_DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# CORS-Konfiguration
+cors.allowed-origins=${CORS_ORIGINS:http://localhost:5173}
+
+# Logging-Konfiguration
 logging.level.org.springframework.security=DEBUG
 logging.level.at.technikum.studymasterbackend.filter.JWTAuthenticationFilter=DEBUG
 
