fixed authentication error on register

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=${SPRING_DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # CORS-Konfiguration
-cors.allowed-origins=${CORS_ORIGINS:http://localhost:5173}
+cors.allowed-origins=${CORS_ORIGINS:http://localhost:5173, http://localhost}
 
 # Logging-Konfiguration
 logging.level.org.springframework.security=DEBUG
