adapted task and progress service to new db structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.jdbc=DEBUG
 logging.level.org.springframework.jdbc.core=DEBUG
 logging.level.org.springframework.data.jdbc.core=DEBUG
+logging.level.org.springframework.web=DEBUG
